unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/breadwinner_ns__BW_Subscription__c.object-meta.xml
<CustomObject>
    <description>Subscriptions Plans and Subscriptions (Suite Billing) from your finance system are synced into Salesforce through Breadwinner.</description>
    <label>NetSuite Subscription</label>
    <nameField>
        <label>Subscription #</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>NetSuite Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>