unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__AdvanceRenewalPeriodNumber__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__AdvanceRenewalPeriodNumber__c</fullName>
    <label>Advance Renewal Period Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>