unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__BillingAccount__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__BillingAccount__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Billing Account</label>
    <referenceTo>breadwinner_ns__BW_Billing_Account__c</referenceTo>
    <relationshipLabel>NetSuite Subscriptions</relationshipLabel>
    <relationshipName>BWSubscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>