unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__CreatedDateOnly__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__CreatedDateOnly__c</fullName>
    <label>Created Date in NetSuite</label>
    <type>Date</type>
</CustomField>