unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__DefaultRenewalPriceBookInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__DefaultRenewalPriceBookInternalId__c</fullName>
    <label>Default Renewal Price Book Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>