unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__DefaultRenewalTermInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__DefaultRenewalTermInternalId__c</fullName>
    <label>Default Renewal Term Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>