unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__DefaultRenewalTranTypeInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__DefaultRenewalTranTypeInternalId__c</fullName>
    <label>Default Renewal Transaction Type Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>