unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__EstimatedRevRecEndDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__EstimatedRevRecEndDate__c</fullName>
    <label>Estimated Revenue Recognition End Date</label>
    <type>Date</type>
</CustomField>