unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__Frequency__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__Frequency__c</fullName>
    <label>Billing Frequency</label>
    <length>255</length>
    <type>Text</type>
</CustomField>