unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__LastBillCycleDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__LastBillCycleDate__c</fullName>
    <label>Last Bill Cycle Date</label>
    <type>Date</type>
</CustomField>