unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__NetSuite_Org_Id__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NetSuite_Org_Id__c</fullName>
    <label>NetSuite Org Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>