unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__NextRenewalStartDate__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__NextRenewalStartDate__c</fullName>
    <label>Next Renewal Start Date</label>
    <type>Date</type>
</CustomField>