unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__RenewalNumber__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RenewalNumber__c</fullName>
    <label>Number of Renewal</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>