unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__RootSubscriptionInternalId__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__RootSubscriptionInternalId__c</fullName>
    <label>Original Subscription Internal Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>