unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__SubscriptionName__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SubscriptionName__c</fullName>
    <description>It stores the &quot;Name&quot; of the Subscription</description>
    <label>Subscription Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>