unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__SubscriptionRevision__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SubscriptionRevision__c</fullName>
    <label>Subscription Revision</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>