unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/fields/breadwinner_ns__SubsidiaryInternalIdList__c.field-meta.xml
<CustomField>
    <fullName>breadwinner_ns__SubsidiaryInternalIdList__c</fullName>
    <description>Stores the Subsidiary Internal Id List of the Subscription Plan</description>
    <label>Subsidiary Internal Id List</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>