unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/listViews/breadwinner_ns__All.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__All</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__NS_Object_Type__c</columns>
    <columns>breadwinner_ns__SubscriptionName__c</columns>
    <columns>breadwinner_ns__SubscriptionPlanName__c</columns>
    <columns>breadwinner_ns__Subsidiary__c</columns>
    <columns>breadwinner_ns__AutoRenewal__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>