unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/listViews/breadwinner_ns__NetSuite_Subscription_Plans.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Subscription_Plans</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__SubscriptionPlanName__c</columns>
    <columns>breadwinner_ns__DisplayName__c</columns>
    <columns>breadwinner_ns__IsInactive__c</columns>
    <columns>breadwinner_ns__IncludeChildren__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>equals</operation>
        <value>SubscriptionPlan</value>
    </filters>
    <label>NetSuite Subscription Plans</label>
</ListView>