unpackaged/main/default/objects/breadwinner_ns__BW_Subscription__c/listViews/breadwinner_ns__NetSuite_Subscriptions.listView-meta.xml
<ListView>
    <fullName>breadwinner_ns__NetSuite_Subscriptions</fullName>
    <columns>NAME</columns>
    <columns>breadwinner_ns__BillingSubscriptionStatus__c</columns>
    <columns>breadwinner_ns__Customer__c</columns>
    <columns>breadwinner_ns__SubscriptionPlan__c</columns>
    <columns>breadwinner_ns__BillingAccount__c</columns>
    <columns>breadwinner_ns__Frequency__c</columns>
    <columns>breadwinner_ns__CurrencyName__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>breadwinner_ns__NS_Object_Type__c</field>
        <operation>equals</operation>
        <value>Subscription</value>
    </filters>
    <label>NetSuite Subscriptions</label>
</ListView>